Fix sidebar width and word wrap styles

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -42,6 +42,9 @@
     padding: 0;
     padding-right: 15px;
     text-align: left;
+    max-width: 145px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
   }
 }
 
